--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "mpl-asset"
+name = "tpl-asset"
 version = "0.0.1"
-description = "Metaplex Asset Protocl"
-authors = ["Metaplex Developers <dev@metaplex.com>"]
+description = "Trezoaplex Asset Protocl"
+authors = ["Trezoaplex Developers <dev@metaplex.com>"]
 repository = "https://github.com/metaplex-foundation/metaplex-program-library"
 license = "AGPL-3.0"
 edition = "2021"
@@ -21,9 +21,9 @@ crate-type = ["cdylib", "lib"]
 
 [dependencies]
 lazy_static = "1.4.0"
-solana-program = "1.10.33"
+trezoa-program = "1.10.33"
 borsh = "0.9.3"
-spl-token = { version ="3.3.0", features = ["no-entrypoint"] }
+tpl-token = { version ="3.3.0", features = ["no-entrypoint"] }
 shank= "0.0.4"
 thiserror = "~1.0"
 flatbuffers = "2.1.2"
@@ -33,8 +33,8 @@ bebop = "2.4.2"
 
 
 [dev-dependencies]
-solana-sdk = "1.10.33"
-solana-program-test = "1.10.33"
+trezoa-sdk = "1.10.33"
+trezoa-program-test = "1.10.33"
 
 
 [build-dependencies]
