--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@metaplex-foundation/mpl-asset",
+  "name": "@trezoaplex-foundation/tpl-asset",
   "version": "0.0.2",
-  "description": "MPL Asset JavaScript API.",
-  "main": "dist/src/mpl-asset.js",
-  "types": "dist/src/mpl-asset.d.ts",
+  "description": "TPL Asset JavaScript API.",
+  "main": "dist/src/tpl-asset.js",
+  "types": "dist/src/tpl-asset.d.ts",
   "scripts": {
     "compile-bebop": "bebopc",
     "check:publish-ready": "yarn build && yarn test",
@@ -14,7 +14,7 @@
     "build": "rimraf dist && tsc -p tsconfig.json",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "amman:start": "DEBUG='amman*' amman start",
-    "amman:stop": "pkill solana-test-validator",
+    "amman:stop": "pkill trezoa-test-validator",
     "test": "ts-node tests/*.ts",
     "posttest": "yarn build && yarn amman:stop",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
@@ -33,21 +33,21 @@
   "keywords": [
     "nft",
     "metaplex",
-    "solana",
+    "trezoa",
     "blockchain"
   ],
-  "homepage": "https://metaplex.com",
+  "homepage": "https://trezoaplex.com",
   "repository": "https://github.com/metaplex-foundation/metaplex-program-library.git",
-  "author": "Metaplex Maintainers <contact@metaplex.com>",
+  "author": "Trezoaplex Maintainers <contact@trezoaplex.com>",
   "license": "MIT",
   "dependencies": {
     "@glasseaters/derive": "^0.0.4",
-    "@metaplex-foundation/beet": "^0.1.2",
-    "@metaplex-foundation/beet-solana": "^0.1.1",
-    "@metaplex-foundation/cusper": "^0.0.2",
-    "@metaplex-foundation/mpl-core": "^0.6.1",
-    "@solana/spl-token": "0.2.0",
-    "@solana/web3.js": "1.37.2",
+    "@trezoaplex-foundation/beet": "^0.1.2",
+    "@trezoaplex-foundation/beet-trezoa": "^0.1.1",
+    "@trezoaplex-foundation/cusper": "^0.0.2",
+    "@trezoaplex-foundation/tpl-core": "^0.6.1",
+    "@trezoa/tpl-token": "0.2.0",
+    "@trezoa/web3.js": "1.37.2",
     "@types/uuid": "^8.3.4",
     "bebop": "^2.4.2",
     "buffer": "^6.0.3",
@@ -58,8 +58,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@metaplex-foundation/amman": "0.6.1",
-    "@metaplex-foundation/solita": "0.5.3",
+    "@trezoaplex-foundation/amman": "0.6.1",
+    "@trezoaplex-foundation/solita": "0.5.3",
     "@types/debug": "^4.1.7",
     "@types/tape": "^4.13.2",
     "bn.js": "^5.2.0",
