--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "tpl-asset"
 version = "0.0.1"
 description = "Trezoaplex Asset Protocl"
-authors = ["Trezoaplex Developers <dev@metaplex.com>"]
-repository = "https://github.com/trezoaplex-foundation/metaplex-program-library"
+authors = ["Trezoaplex Developers <dev@trezoaplex.com>"]
+repository = "https://github.com/trezoaplex-foundation/trezoaplex-program-library"
 license = "AGPL-3.0"
 edition = "2021"
 readme = "README.md"
